--- a/garits/pom.xml
+++ b/garits/pom.xml
@@ -93,6 +93,8 @@
 			<groupId>com.itextpdf</groupId>
 			<artifactId>hyph</artifactId>
 			<version>7.0.4</version>
+		</dependency>
+		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
